--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
       "hyva-themes/magento2-compat-module-fallback": "^1.1"
   },
   "license": [
-    ""
-  ],
+        "OSL-3.0"
+    ],
   "autoload": {
     "files": [
       "registration.php"
