--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
   "name": "commerce365/module-customer-price-hyva-compatibility",
-  "version": "1.0.13-beta",
+  "version": "1.0.13",
   "description": "Commerce 365 for Magento - B2B - Customer price - Hyvä compatibility module",
   "homepage": "https://n.vision/products/commerce-365-for-magento-b2b/",
   "type": "magento2-module",
   "require": {
-      "commerce365/module-customer-price": "1.8.2-beta"
+      "commerce365/module-customer-price": "1.8.*"
   },
   "license": [
         "OSL-3.0"
