--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,12 @@
   "homepage": "https://n.vision/products/commerce-365-for-magento-b2b/",
   "type": "magento2-module",
   "require": {
-      "commerce365/module-customer-price": "2.0.*"
+    "commerce365/module-customer-price": "2.0.*",
+    "hyva-themes/magento2-theme-module": ">=1.3.11"
   },
-  "license": [
-        "OSL-3.0"
-    ],
+  "license": ["OSL-3.0"],
   "autoload": {
-    "files": [
-      "registration.php"
-    ],
+    "files": ["registration.php"],
     "psr-4": {
       "Commerce365\\CustomerPriceHyva\\": ""
     }
